--- a/教程版/myapp2/package.json
+++ b/教程版/myapp2/package.json
@@ -18,10 +18,12 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx-compat": "^7.18.6"
+    "@babel/plugin-transform-react-jsx-compat": "^7.18.6",
+    "jest": "^27.5.1"
   }
 }
