--- a/教程版/myapp2/package.json
+++ b/教程版/myapp2/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
+    "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
