--- a/教程版/myapp2/package.json
+++ b/教程版/myapp2/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@better-scroll/core": "^2.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.8",
     "antd-mobile": "^5.22.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "http-proxy-middleware": "^2.0.6",
     "immutable": "^4.1.0",
     "mobx": "^6.6.1",
