--- a/myApp/package.json
+++ b/myApp/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/router": "^0.0.1-beta.84",
+    "bulma": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.3.7"
@@ -23,6 +25,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "express": "^4.18.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
