--- a/myApp/package.json
+++ b/myApp/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "express": "^4.18.2",
+    "less": "^4.1.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
