学习新语法

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,5 @@
 {
   "attachmentFolderPath": "readme.assets",
-  "useMarkdownLinks": true
+  "useMarkdownLinks": true,
+  "newLinkFormat": "relative"
 }
