--- a/教程版/myapp/package.json
+++ b/教程版/myapp/package.json
@@ -22,7 +22,8 @@
     "rules": {
       "no-undef": "off",
       "no-restricted-globals": "off",
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "import/first": "off"
     },
     "extends": [
       "react-app",
