--- a/DrCow/package.json
+++ b/DrCow/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-markdown": "^6.2.4",
     "@codemirror/language": "^6.10.1",
     "@types/codemirror": "^5.60.15",
     "@types/simplemde": "^1.11.11",
