--- a/DrCow/package.json
+++ b/DrCow/package.json
@@ -10,19 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@codemirror/lang-javascript": "^6.2.2",
-    "@codemirror/lang-markdown": "^6.2.4",
-    "@codemirror/language": "^6.10.1",
-    "@types/codemirror": "^5.60.15",
-    "@types/simplemde": "^1.11.11",
+    "@tanstack/react-router": "^1.23.1",
+    "@tanstack/router-devtools": "^1.23.1",
     "codemirror": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "simplemde": "^1.11.2"
+    "simplemde": "^1.11.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@tanstack/router-vite-plugin": "^1.23.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/simplemde": "^1.11.11",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
