--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,4 @@
 {
-  "accentColor": "",
-  "baseFontSize": 16,
-  "theme": "obsidian",
-  "showViewHeader": false
+  "baseFontSize": 15,
+  "baseFontSizeAction": true
 }
