--- a/react19/package.json
+++ b/react19/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-scan": "^0.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
